--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="content">
         <div class="card">
-            <img src="images\image1.png" alt="Image 1">
+            <img src="image1.png" alt="Image 1">
             <h2>GTA V</h2>
             <p>Game version : v1.0.3411 <br>
                    Repack Size : 63.9 GB <br>
@@ -95,7 +95,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/ldroy146snwest4/GTAV.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image2.jpg" alt="Image 2">
+            <img src="image2.jpg" alt="Image 2">
             <h2>Horizon Zero Dawn Remastered</h2>
             <p>Game Version: v1.0.37.0  <br>
                     Repack Size : 63.1 GB <br>
@@ -103,7 +103,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/5jc0cm1gwnyrw98/HZDR.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image3.png" alt="Image 3">
+            <img src="image3.png" alt="Image 3">
             <h2>Call of Duty Modern Warfare III</h2>
             <p>Game Version : v1.9.461 <br>
                    Repack Size : 12.8 GB <br>
@@ -111,7 +111,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/ljalacri7nn4z6m/CoDMW3.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image4.png" alt="Image 3">
+            <img src="image4.png" alt="Image 3">
             <h2>Assasian's Creed Mirage</h2>
             <p>Game Version: v1.0.6<br>
                   Repack Size : 20 GB <br>
@@ -119,7 +119,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/ykrfntbqx19ze3t/ACM.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image5.jpeg" alt="Image 3">
+            <img src="image5.jpeg" alt="Image 3">
             <h2>A Quiet Place: The Road Ahead</h2>
             <p>Game Version: v1.0.0<br>
                    Repack Size : 28.1 GB  <br>
@@ -127,7 +127,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/fy8vkp9wu8lhwwk/AQPRH.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image6.jpg" alt="Image 3">
+            <img src="image6.jpg" alt="Image 3">
             <h2>Hitman: World of Assassination</h2>
             <p>Game Version: v3.180<br>
                    Repack Size : 58.9 GB <br>
@@ -135,35 +135,35 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/ghpb12rguotsl14/HitmanWoA.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image7.png" alt="Image 3">
+            <img src="image7.png" alt="Image 3">
             <h2>Mad Max</h2>
             <p>Game Version : v1.0.3.0 <br>Repack Size : 3.9 GB <br>
              Final Size : 33 GB </p>
            <button onclick="window.location.href='https://www.mediafire.com/file/n3c2ozez86u9wqr/MadMax.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image8.jpeg" alt="Image 3">
+            <img src="image8.jpeg" alt="Image 3">
             <h2>Farming Simulator 25</h2>
             <p>Game Version: v1.2.1.0 <br>Repack Size : 17.8 GB <br>
                    Final Size : 35.9 GB</p>
             <button onclick="window.location.href='https://www.mediafire.com/file/8bxkvlzwmelwpnh/FarmingSim25.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image9.jpg" alt="Image 3">
+            <img src="image9.jpg" alt="Image 3">
             <h2>Euro Truck Simulator 2</h2>
             <p>Game Version: v1.53.2.1 <br> Repack Size : 14 GB <br>
                     Final Size : 31.3 GB</p>
             <button onclick="window.location.href='https://www.mediafire.com/file/i744p827z1h407f/ETS2.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image10.jpeg" alt="Image 3">
+            <img src="image10.jpeg" alt="Image 3">
             <h2>Kong: Survivor Instinct</h2>
             <p>Game Version: v1.0.4  <br>Repack Size : 4.5 GB <br>
                     Final Size : 7.7 GB</p>
            <button onclick="window.location.href='https://www.mediafire.com/file/0emxki1zj412iov/KongSurvivorInstinct.torrent/file';">Download</button>
         </div>
          <div class="card">
-            <img src="images\image11.jpg" alt="Image 3">
+            <img src="image11.jpg" alt="Image 3">
             <h2>S.T.A.L.K.E.R. Anomaly</h2>
             <p>Game Version: v1.5.2 <br>
                     Repack Size : 8.4 GB <br>
@@ -171,7 +171,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/r8j907ry8oaqzpo/StalkerAnomaly.torrent/file';">Download</button>
         </div>
          <div class="card">
-            <img src="images\image12.jpeg" alt="Image 3">
+            <img src="image12.jpeg" alt="Image 3">
             <h2>Marvel's Spider-Man Remastered</h2>
             <p>Game Version : v3.618.0.0 <br> 
                     Repack Size : 38.5 GB <br>
@@ -179,7 +179,7 @@
              <button onclick="window.location.href='https://www.mediafire.com/file/jn60xdb67788ngz/SpidermanRemastered.torrent/file';">Download</button>
         </div>
          <div class="card">
-            <img src="images\image13.jpeg" alt="Image 3">
+            <img src="image13.jpeg" alt="Image 3">
             <h2>Marvel's Spider-Man Miles Morales</h2>
             <p>Game Version : v3.617.1.0 <br>
                    Repack Size : 27.7 GB <br>
@@ -194,7 +194,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/446woqare88bz81/GoWR.torrent/file';">Download</button>
         </div>
          <div class="card">
-            <img src="images\image15.jpg" alt="Image 3">
+            <img src="image15.jpg" alt="Image 3">
             <h2>CarX Street</h2>
             <p>Game Version: v1.2.1 <br> Repack Size : 10.8 GB <br>
                       Final Size : 17.5 GB</p>
