--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/yopjicw0hk6buuu/SpidermanMilesMorales.torrent/file';">Download</button>
         </div>
          <div class="card">
-            <img src="images\image14.jpg" alt="Image 3">
+            <img src="image14.jpg" alt="Image 3">
             <h2>God of War: Ragnarok</h2>
             <p> Game Version: v1.7 <br>Repack Size : From 68.5 GB <br>
               Final Size : 177 GB</p>
