--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://knightking032.github.io/Knight-Repacks/#">Home</a></li>
             <li><a href="#">Categories</a></li>
         </ul>
     </nav>
