--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 
     <footer>
         <p>&copy; 2025 Knight Repacks. All rights reserved.</p>
+        <button onclick="window.location.href='https://www.youtube.com/@Knightking032';">YouTube</button>
     </footer>
 </body>
 </html>
