--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <nav>
         <ul>
             <li><a href="https://knightking032.github.io/Knight-Repacks/#">Home</a></li>
-            <li><a href="#">Categories</a></li>
+            <li><a href="categories.html">Categories</a></li>
         </ul>
     </nav>
 
