--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
             background-color: #555;
             border-radius: 4px;
         }
+            .center-image {
+            text-align: center;
+            margin: 2rem 0;
+        }
+        .center-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+   .heading {
+            text-align: center;
+            margin: 2rem 0;
+            font-size: 2rem;
+            font-weight: bold;
+            color: #444;
+        }
         .content {
             padding: 2rem;
             display: flex;
@@ -83,6 +99,14 @@
             <li><a href="categories.html">Categories</a></li>
         </ul>
     </nav>
+    
+   <div class="center-image">
+        <img src="banner.jpg" alt="Knight Repacks Banner">
+    </div>
+
+    <div class="heading">
+        TOP GAMES
+    </div>
 
     <div class="content">
         <div class="card">
