--- a/categories.html
+++ b/categories.html
@@ -85,17 +85,16 @@ footer {
 <main>
     <h2 align="center">Top Categories</h2>
    <div class="button-container">
-    <a href="page1.html" class="button">Action</a>
-    <a href="page2.html" class="button">Shooter</a>
-    <a href="page3.html" class="button">Simulation</a> <br>
-    <a href="page3.html" class="button">Racing</a>
-    <a href="page3.html" class="button">Horror</a>
-    <a href="page3.html" class="button">Arcade</a><br>
-    <a href="page3.html" class="button">Fighting</a>
-    <a href="page3.html" class="button">Adventure</a>
-    <a href="page3.html" class="button">Strategy</a><br>
-    <a href="page3.html" class="button">Simulation</a>
-    <a href="page3.html" class="button">Offline</a>
+    <a href="Action.html" class="button">Action</a>
+    <a href="Shooter.html" class="button">Shooter</a>
+    <a href="Simulation.html" class="button">Simulation</a> <br>
+    <a href="Racing.html" class="button">Racing</a>
+    <a href="Horror.html" class="button">Horror</a>
+    <a href="Arcade.html" class="button">Arcade</a><br>
+    <a href="Fighting.html" class="button">Fighting</a>
+    <a href="Adventure.html" class="button">Adventure</a>
+    <a href="Strategy.html" class="button">Strategy</a><br>
+    <a href="Offline.html" class="button">Offline</a>
   </main>
 
     <footer>
