--- a/Action.html
+++ b/Action.html
@@ -97,7 +97,7 @@
 
     <div class="content">
         <div class="card">
-                <img src="images\image1.png" alt="Image 1">
+                <img src="image1.png" alt="Image 1">
             <h2>GTA V</h2>
             <p>Game version : v1.0.3411 <br>
                    Repack Size : 63.9 GB <br>
@@ -106,7 +106,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/ldroy146snwest4/GTAV.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image4.png" alt="Image 3">
+            <img src="image4.png" alt="Image 3">
             <h2>Assasian's Creed Mirage</h2>
             <p>Game Version: v1.0.6<br>
                   Repack Size : 20 GB <br>
@@ -114,7 +114,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/ykrfntbqx19ze3t/ACM.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image5.jpeg" alt="Image 3">
+            <img src="image5.jpeg" alt="Image 3">
             <h2>A Quiet Place: The Road Ahead</h2>
             <p>Game Version: v1.0.0<br>
                    Repack Size : 28.1 GB  <br>
@@ -122,7 +122,7 @@
            <button onclick="window.location.href='https://www.mediafire.com/file/fy8vkp9wu8lhwwk/AQPRH.torrent/file';">Download</button>
         </div>
         <div class="card">
-            <img src="images\image6.jpg" alt="Image 3">
+            <img src="image6.jpg" alt="Image 3">
             <h2>Hitman: World of Assassination</h2>
             <p>Game Version: v3.180<br>
                    Repack Size : 58.9 GB <br>
@@ -130,14 +130,14 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/ghpb12rguotsl14/HitmanWoA.torrent/file';">Download</button>
         </div>
     <div class="card">
-            <img src="images\image7.png" alt="Image 3">
+            <img src="image7.png" alt="Image 3">
             <h2>Mad Max</h2>
             <p>Game Version : v1.0.3.0 <br>Repack Size : 3.9 GB <br>
              Final Size : 33 GB </p>
            <button onclick="window.location.href='https://www.mediafire.com/file/n3c2ozez86u9wqr/MadMax.torrent/file';">Download</button>
         </div>
     <div class="card">
-            <img src="images\image12.jpeg" alt="Image 3">
+            <img src="image12.jpeg" alt="Image 3">
             <h2>Marvel's Spider-Man Remastered</h2>
             <p>Game Version : v3.618.0.0 <br> 
                     Repack Size : 38.5 GB <br>
@@ -145,7 +145,7 @@
              <button onclick="window.location.href='https://www.mediafire.com/file/jn60xdb67788ngz/SpidermanRemastered.torrent/file';">Download</button>
         </div>
     <div class="card">
-            <img src="images\image13.jpeg" alt="Image 3">
+            <img src="image13.jpeg" alt="Image 3">
             <h2>Marvel's Spider-Man Miles Morales</h2>
             <p>Game Version : v3.617.1.0 <br>
                    Repack Size : 27.7 GB <br>
@@ -153,7 +153,7 @@
             <button onclick="window.location.href='https://www.mediafire.com/file/yopjicw0hk6buuu/SpidermanMilesMorales.torrent/file';">Download</button>
         </div>
   <div class="card">
-            <img src="images\image14.jpg" alt="Image 3">
+            <img src="image14.jpg" alt="Image 3">
             <h2>God of War: Ragnarok</h2>
             <p> Game Version: v1.7 <br>Repack Size : From 68.5 GB <br>
               Final Size : 177 GB</p>
