--- a/Shooter.html
+++ b/Shooter.html
@@ -105,13 +105,13 @@
                   
             <button onclick="window.location.href='https://www.mediafire.com/file/ldroy146snwest4/GTAV.torrent/file';">Download</button>
         </div>
-        <div class="card">
-            <img src="image4.png" alt="Image 3">
-            <h2>Assasian's Creed Mirage</h2>
-            <p>Game Version: v1.0.6<br>
-                  Repack Size : 20 GB <br>
-                  Final Size : 41 GB</p>
-           <button onclick="window.location.href='https://www.mediafire.com/file/ykrfntbqx19ze3t/ACM.torrent/file';">Download</button>
+             <div class="card">
+            <img src="image3.png" alt="Image 3">
+            <h2>Call of Duty Modern Warfare III</h2>
+            <p>Game Version : v1.9.461 <br>
+                   Repack Size : 12.8 GB <br>
+                    Final Size : 18 GB</p>
+           <button onclick="window.location.href='https://www.mediafire.com/file/ljalacri7nn4z6m/CoDMW3.torrent/file';">Download</button>
         </div>
         <div class="card">
             <img src="image5.jpeg" alt="Image 3">
