--- a/Shooter.html
+++ b/Shooter.html
@@ -113,13 +113,13 @@
                     Final Size : 18 GB</p>
            <button onclick="window.location.href='https://www.mediafire.com/file/ljalacri7nn4z6m/CoDMW3.torrent/file';">Download</button>
         </div>
-        <div class="card">
-            <img src="image5.jpeg" alt="Image 3">
-            <h2>A Quiet Place: The Road Ahead</h2>
-            <p>Game Version: v1.0.0<br>
-                   Repack Size : 28.1 GB  <br>
-                   Final Size : 37.6 GB</p>
-           <button onclick="window.location.href='https://www.mediafire.com/file/fy8vkp9wu8lhwwk/AQPRH.torrent/file';">Download</button>
+         <div class="card">
+            <img src="image2.jpg" alt="Image 2">
+            <h2>Horizon Zero Dawn Remastered</h2>
+            <p>Game Version: v1.0.37.0  <br>
+                    Repack Size : 63.1 GB <br>
+                    Final Size : 121 GB </p>
+            <button onclick="window.location.href='https://www.mediafire.com/file/5jc0cm1gwnyrw98/HZDR.torrent/file';">Download</button>
         </div>
         <div class="card">
             <img src="image6.jpg" alt="Image 3">
