--- a/Shooter.html
+++ b/Shooter.html
@@ -121,13 +121,12 @@
                     Final Size : 121 GB </p>
             <button onclick="window.location.href='https://www.mediafire.com/file/5jc0cm1gwnyrw98/HZDR.torrent/file';">Download</button>
         </div>
-        <div class="card">
-            <img src="image6.jpg" alt="Image 3">
-            <h2>Hitman: World of Assassination</h2>
-            <p>Game Version: v3.180<br>
-                   Repack Size : 58.9 GB <br>
-                   Final Size : 77 GB</p>
-            <button onclick="window.location.href='https://www.mediafire.com/file/ghpb12rguotsl14/HitmanWoA.torrent/file';">Download</button>
+           <div class="card">
+            <img src="image10.jpeg" alt="Image 3">
+            <h2>Kong: Survivor Instinct</h2>
+            <p>Game Version: v1.0.4  <br>Repack Size : 4.5 GB <br>
+                    Final Size : 7.7 GB</p>
+           <button onclick="window.location.href='https://www.mediafire.com/file/0emxki1zj412iov/KongSurvivorInstinct.torrent/file';">Download</button>
         </div>
     <div class="card">
             <img src="image7.png" alt="Image 3">
