--- a/Shooter.html
+++ b/Shooter.html
@@ -128,12 +128,13 @@
                     Final Size : 7.7 GB</p>
            <button onclick="window.location.href='https://www.mediafire.com/file/0emxki1zj412iov/KongSurvivorInstinct.torrent/file';">Download</button>
         </div>
-    <div class="card">
-            <img src="image7.png" alt="Image 3">
-            <h2>Mad Max</h2>
-            <p>Game Version : v1.0.3.0 <br>Repack Size : 3.9 GB <br>
-             Final Size : 33 GB </p>
-           <button onclick="window.location.href='https://www.mediafire.com/file/n3c2ozez86u9wqr/MadMax.torrent/file';">Download</button>
+      <div class="card">
+            <img src="image11.jpg" alt="Image 3">
+            <h2>S.T.A.L.K.E.R. Anomaly</h2>
+            <p>Game Version: v1.5.2 <br>
+                    Repack Size : 8.4 GB <br>
+                   Final Size : 16.2 GB </p>
+           <button onclick="window.location.href='https://www.mediafire.com/file/r8j907ry8oaqzpo/StalkerAnomaly.torrent/file';">Download</button>
         </div>
     <div class="card">
             <img src="image12.jpeg" alt="Image 3">
